--- a/galeri.html
+++ b/galeri.html
@@ -9,15 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="foto/logo.png" />
+    <link rel="icon" type="image/x-icon" href="rainisaaa
+/logo.png" />
 </head>
 
-<body style="background-image: url('foto/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<body style="background-image: url('rainisaaa
+/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 
     <div style="padding-left: 50px; padding-right: 50px">
         <nav class="menuatas menuatas-expand-lg bg-white menuatas-light sticky-top p-0" id="top">
             <a href="index.html" class="menuatas-brand lurus align-items-center px-4 px-lg-5 d-flex align-items-center">
-                <img src="foto/logo.png" width="50" style="margin-right: 10px;">
+                <img src="rainisaaa
+/logo.png" width="50" style="margin-right: 10px;">
                 <h1 class="m-0">TK Islam Al-Kamilah.</h1>
             </a>
             <button type="button" class="menuatas-toggler me-4" data-bs-toggle="collapse" data-bs-target="#menuatasCollapse">
@@ -39,7 +42,8 @@
             <div id="header-jumbotronbesar" class="jumbotronbesar slide">
                 <div class="jumbotronbesar-inner">
                     <div class="jumbotronbesar-item active">
-                        <img class="w-100 gambar" src="foto/bgutama.jpg" alt="Image" style="height: 300px; object-fit: cover" />
+                        <img class="w-100 gambar" src="rainisaaa
+/bgutama.jpg" alt="Image" style="height: 300px; object-fit: cover" />
                         <div class="jumbotronbesar-judul">
                             <div class="kontainer">
                                 <div class="baris kolom-rata-tengah">
@@ -68,7 +72,8 @@
                     <div class="baris g-4">
                         <div class="kolom-sedang-6">
                             <div class="">
-                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="foto/gl1.jpg" alt="" width="100%" /></a>
+                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="rainisaaa
+/gl1.jpg" alt="" width="100%" /></a>
                                 <h5 class="mt-3">Pendidikan Agama dan Akhlak</h5>
                                 <br />
                                 <a href="artikel1.html" class="btn btn-primary tombolbiru" style="color: white;">Read More</a>
@@ -76,7 +81,8 @@
                         </div>
                         <div class="kolom-sedang-6">
                             <div class="">
-                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="foto/gl3.jpg" alt="" width="100%" /></a>
+                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="rainisaaa
+/gl3.jpg" alt="" width="100%" /></a>
                                 <h5 class="mt-3">Kegiatan Motorik dan Kreativitas
                                 </h5>
                                 <br />
@@ -85,7 +91,8 @@
                         </div>
                         <div class="kolom-sedang-6">
                             <div class="">
-                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="foto/gl10.jpg" alt="" width="100%" /></a>
+                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="rainisaaa
+/gl10.jpg" alt="" width="100%" /></a>
                                 <h5 class="mt-3">Bermain dan Belajar dengan Alat Peraga
 
                                 </h5>
@@ -95,7 +102,8 @@
                         </div>
                         <div class="kolom-sedang-6">
                             <div class="">
-                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="foto/gl6.jpg" alt="" width="100%" /></a>
+                                <a href="detail.html"><img style="height: 500px" class="letak-foto" src="rainisaaa
+/gl6.jpg" alt="" width="100%" /></a>
                                 <h5 class="mt-3">Eksplorasi Seni Musik dan Tari
                                 </h5>
                                 <br />
