--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="foto/logo.png" />
+    <link rel="icon" type="image/x-icon" href="rainisaaa
+/logo.png" />
 </head>
 
-<body style="background-image: url('foto/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<body style="background-image: url('rainisaaa
+/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 
     <div style="padding-left: 50px; padding-right: 50px">
         <nav class="menuatas menuatas-expand-lg bg-white menuatas-light sticky-top p-0" id="top">
             <a href="index.html" class="menuatas-brand lurus align-items-center px-4 px-lg-5 d-flex align-items-center">
-                <img src="foto/logo.png" width="50" style="margin-right: 10px;">
+                <img src="rainisaaa
+/logo.png" width="50" style="margin-right: 10px;">
                 <h1 class="m-0">TK Islam Al-Kamilah.</h1>
             </a>
             <button type="button" class="menuatas-toggler me-4" data-bs-toggle="collapse" data-bs-target="#menuatasCollapse">
@@ -39,7 +42,8 @@
             <div id="header-jumbotronbesar" class="jumbotronbesar slide">
                 <div class="jumbotronbesar-inner">
                     <div class="jumbotronbesar-item active">
-                        <img class="w-100 gambar" src="foto/bgutama.jpg" alt="Image" style="height: 700px; object-fit: cover" />
+                        <img class="w-100 gambar" src="rainisaaa
+/bgutama.jpg" alt="Image" style="height: 700px; object-fit: cover" />
                         <div class="jumbotronbesar-judul">
                             <div class="kontainer">
                                 <div class="baris kolom-rata-tengah">
@@ -97,7 +101,8 @@
                     </table>
                 </div>
                 <div class="kolom-sedang-7 horizontal-otomatis">
-                    <img class="letak-foto sudut" style="height: 500px; object-fit: cover" width="100%" src="foto/gl9.jpg" />
+                    <img class="letak-foto sudut" style="height: 500px; object-fit: cover" width="100%" src="rainisaaa
+/gl9.jpg" />
                     <br> <br>
                     <p>Website TK Islam Al Kamilah adalah portal resmi yang dirancang untuk memberikan kemudahan akses informasi kepada masyarakat, khususnya para orang tua, calon siswa, dan komunitas pendidikan. Berlokasi strategis di Jl. Sunan Kalijaga
                         Rt.03/11, No.03, Larangan, Larangan Utara, Kota Tangerang, TK Islam Al Kamilah hadir sebagai lembaga pendidikan anak usia dini yang berkomitmen mencetak generasi cerdas, kreatif, dan berakhlak mulia dengan landasan nilai-nilai
@@ -119,7 +124,8 @@
                     <div class="kartu" style="border-radius: 10px">
                         <div class="baris no-gutters" style="padding: 0">
                             <div class="kolom-sedang-12 horizontal-otomatis">
-                                <img style="height: 500px;object-fit: cover;" width="100%" src="foto/gl2.jpg" />
+                                <img style="height: 500px;object-fit: cover;" width="100%" src="rainisaaa
+/gl2.jpg" />
                             </div>
                         </div>
                     </div>
@@ -128,7 +134,8 @@
                     <div class="kartu" style="border-radius: 10px">
                         <div class="baris no-gutters" style="padding: 0">
                             <div class="kolom-sedang-12 horizontal-otomatis">
-                                <img style="height: 500px;object-fit: cover;" width="100%" src="foto/gl3.jpg" />
+                                <img style="height: 500px;object-fit: cover;" width="100%" src="rainisaaa
+/gl3.jpg" />
                             </div>
                         </div>
                     </div>
@@ -137,7 +144,8 @@
                     <div class="kartu" style="border-radius: 10px">
                         <div class="baris no-gutters" style="padding: 0">
                             <div class="kolom-sedang-12 horizontal-otomatis">
-                                <img style="height: 500px;object-fit: cover;" width="100%" src="foto/gl4.jpg" />
+                                <img style="height: 500px;object-fit: cover;" width="100%" src="rainisaaa
+/gl4.jpg" />
                             </div>
                         </div>
                     </div>
@@ -146,7 +154,8 @@
                     <div class="kartu" style="border-radius: 10px">
                         <div class="baris no-gutters" style="padding: 0">
                             <div class="kolom-sedang-12 horizontal-otomatis">
-                                <img style="height: 500px;object-fit: cover;" width="100%" src="foto/gl6.jpg" />
+                                <img style="height: 500px;object-fit: cover;" width="100%" src="rainisaaa
+/gl6.jpg" />
                             </div>
                         </div>
                     </div>
