--- a/kamilah1.html
+++ b/kamilah1.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="foto/logo.png" />
+    <link href="css/kamilah2.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="rainisaaa
+/logo.png" />
     <style>
         .faq-title {
             color: #3498db;
@@ -64,12 +65,14 @@
     </style>
 </head>
 
-<body style="background-image: url('foto/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<body style="background-image: url('rainisaaa
+/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 
     <div style="padding-left: 50px; padding-right: 50px">
         <nav class="menuatas menuatas-expand-lg bg-white menuatas-light sticky-top p-0" id="top">
             <a href="index.html" class="menuatas-brand lurus align-items-center px-4 px-lg-5 d-flex align-items-center">
-                <img src="foto/logo.png" width="50" style="margin-right: 10px;">
+                <img src="rainisaaa
+/logo.png" width="50" style="margin-right: 10px;">
                 <h1 class="m-0">TK Islam Al-Kamilah.</h1>
             </a>
             <button type="button" class="menuatas-toggler me-4" data-bs-toggle="collapse" data-bs-target="#menuatasCollapse">
@@ -178,7 +181,8 @@
                     </div>
                 </div>
                 <div class="kolom-sedang-7 horizontal-otomatis">
-                    <img class="letak-foto sudut" style="height: 500px; object-fit: cover" width="100%" src="foto/gl9.jpg" />
+                    <img class="letak-foto sudut" style="height: 500px; object-fit: cover" width="100%" src="rainisaaa
+/gl9.jpg" />
                 </div>
             </div>
         </div>
