--- a/kontak.html
+++ b/kontak.html
@@ -9,15 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="foto/logo.png" />
+    <link rel="icon" type="image/x-icon" href="rainisaaa
+/logo.png" />
 </head>
 
-<body style="background-image: url('foto/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<body style="background-image: url('rainisaaa
+/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 
     <div style="padding-left: 50px; padding-right: 50px">
         <nav class="menuatas menuatas-expand-lg bg-white menuatas-light sticky-top p-0" id="top">
             <a href="index.html" class="menuatas-brand lurus align-items-center px-4 px-lg-5 d-flex align-items-center">
-                <img src="foto/logo.png" width="50" style="margin-right: 10px;">
+                <img src="rainisaaa
+/logo.png" width="50" style="margin-right: 10px;">
                 <h1 class="m-0">TK Islam Al-Kamilah.</h1>
             </a>
             <button type="button" class="menuatas-toggler me-4" data-bs-toggle="collapse" data-bs-target="#menuatasCollapse">
@@ -64,7 +67,8 @@
         <div class="kontainer">
             <div class="baris g-5 jarak-items-akhir">
                 <div class="kolom-sedang-7 horizontal-otomatis">
-                    <img class="letak-foto sudut" style="height: 500px; object-fit: cover;padding-bottom: 10%;" width="100%" src="foto/gl10.jpg" />
+                    <img class="letak-foto sudut" style="height: 500px; object-fit: cover;padding-bottom: 10%;" width="100%" src="rainisaaa
+/gl10.jpg" />
                 </div>
                 <div class="kolom-sedang-5 horizontal-otomatis">
                     <h2><b>Form Pesan</b></h2>
