--- a/artikel3.html
+++ b/artikel3.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/kamilah2.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="rainisaaa
 /logo.png" />
 </head>
