--- a/artikel1.html
+++ b/artikel1.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/kamilah2.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="rainisaaa
 /logo.png" />
 </head>
 
-<body style="background-image: url('foto/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<body style="background-image: url('rainisaaa
+/bodi.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 
     <div style="padding-left: 50px; padding-right: 50px">
         <nav class="menuatas menuatas-expand-lg bg-white menuatas-light sticky-top p-0" id="top">
